FIXED YOUR SHIT

--- a/src/locales/Bundle_fi.properties
+++ b/src/locales/Bundle_fi.properties
@@ -6,14 +6,11 @@ start=Aloita
 
 # Strengths.java
 
-strengths=Vahvuudet
+urStrengths=Vahvuutesi
 
 # PersonalDetails.java
 
-setInfo=Lähetä tiedot
-details=Henkilötiedot
-back=Takaisin
-next=Seuraava
+setInfo=Aseta tiedot
 name=Nimi:
 address=Kotiosoite:
 email=Sähköposti:
@@ -22,3 +19,96 @@ browse=Selaa
 other=Muuta:
 zip=Postinumero:
 town=Postitoimipaikka:
+pngFiles=PNG-tiedostot
+
+# Degrees.java
+
+school=Oppilaitos
+education=Koulutus
+degree=Tutkinto
+year1=Aloitusvuosi
+year2=Päätösvuosi
+
+# Courses.java
+
+yourCourses=Kurssisi
+
+# WorkExperience.java
+
+workPlace=Työpaikka
+job=Työ
+date1=Aloituspäivämäärä
+date2=Lopetuspäivämäärä
+title=Työnimike
+
+years=vuotta
+months=kuukautta
+weeks=viikkoa
+
+year=vuosi
+month=kuukausi
+week=viikko
+
+# ITSkills.java
+
+urSkilz=Ohjelmat joita osaat käyttää
+
+# Languages.java
+
+langSkill=Kielitaidot
+speech=Puhe
+written=Kirjallinen
+native=Äidinkieli
+
+langIn=Syötä kieli
+beginner=Aloittelija
+intermediate=Keskitaso
+advanced=Edistyksellinen
+fluent=Sujuva
+
+selectSpeech=Valitse arvioimasi puhetaito
+selectWritten=Valitse arvioimasi kirjallinen kielitaito
+setNative=Aseta äidinkieleksesi
+
+# Hobbies.javva
+
+urHobisColon3=Harrastuksesi
+
+# Positions.java
+
+urPos=Työtehtäväsi
+
+# Referees.java
+
+urRefs=Suosittelijasi
+
+# GLOBAL STUFF
+
+add=Lisää
+remove=Poista
+next=Seuraava
+back=Takaisin
+
+references=Suosittelijat
+positions=Työtehtävät
+hobbies=Harrastukset
+languages=Kielet
+skills=IT-Taidot
+experience=Työkokemus
+courses=Kurssit
+degrees=Tutkinnot
+details=Henkilötiedot
+strengths=Vahvuudet
+
+createCV=Luo CV
+
+plsEnter=*Pakollinen
+
+genitive=:n
+
+# ERROR MESSAGES
+
+enterAll=Syötä tiedot joka kenttään.
+enterSchool=Syötä oppilaitoksen nimi.
+enterEd=Syötä koulutuksen nimi.
+enterDeg=Syötä tutkinnon nimi.
