--- a/src/locales/Bundle_en.properties
+++ b/src/locales/Bundle_en.properties
@@ -6,14 +6,11 @@ start=Start
 
 # Strengths.java
 
-strengths=Strengths
+urStrengths=Your strengths
 
 # PersonalDetails.java
 
 setInfo=Set information
-details=Personal Details
-back=Back
-next=Next
 name=Name:
 address=Address:
 email=Email:
@@ -22,3 +19,96 @@ browse=Browse
 other=Other:
 zip=Zip code:
 town=Town:
+pngFiles=PNG files
+
+# Degrees.java
+
+school=Institution
+education=Education
+degree=Degree
+year1=Starting Year
+year2=Ending Year
+
+# Courses.java
+
+yourCourses=Your courses
+
+# WorkExperience.java
+
+workPlace=Work place
+job=Job
+date1=Starting date
+date2=Ending date
+title=Job title
+
+years=years
+months=months
+weeks=weeks
+
+year=year
+month=month
+week=week
+
+# ITSkills.java
+
+urSkilz=Programs you can use
+
+# Languages.java
+
+langSkill=Linguistics
+speech=Spoken
+written=Written
+native=Native
+
+langIn=Enter a language
+beginner=Beginner
+intermediate=Intermediate
+advanced=Advanced
+fluent=Fluent
+
+selectSpeech=Select spoken skill level
+selectWritten=Select written skill level
+setNative=Set as native language
+
+# Hobbies.javva
+
+urHobisColon3=Your hobbies
+
+# Positions.java
+
+urPos=Your positions
+
+# Referees.java
+
+urRefs=Your references
+
+# GLOBAL STUFF
+
+add=Add
+remove=Remove
+next=Next
+back=Back
+
+references=References
+positions=Positions
+hobbies=Hobbies
+languages=Languages
+skills=IT Skills
+experience=Work Experience
+courses=Courses
+degrees=Degrees
+details=Personal Details
+strengths=Strengths
+
+createCV=Create CV
+
+plsEnter=*Required
+
+genitive='s
+
+# ERROR MESSAGES
+
+enterAll=Please enter all information.
+enterSchool=Please enter institution name.
+enterEd=Please enter education name.
+enterDeg=Please enter degree name.
