more languages lol

--- a/src/locales/Bundle_fi.properties
+++ b/src/locales/Bundle_fi.properties
@@ -1,6 +1,6 @@
 # Main.java
 
-cvGen=CV-generaattori
+cvGen=CV-Rakentaja
 leave=Poistu
 start=Aloita
 
@@ -66,8 +66,8 @@ intermediate=Keskitaso
 advanced=Edistyksellinen
 fluent=Sujuva
 
-selectSpeech=Valitse arvioimasi puhetaito
-selectWritten=Valitse arvioimasi kirjallinen kielitaito
+selectSpeech=Valitse puhuttu kielitaitotasosi
+selectWritten=Valitse kirjallinen kielitaitotasosi
 setNative=Aseta äidinkieleksesi
 
 # Hobbies.javva
