--- a/src/Bundle_es.properties
+++ b/src/Bundle_es.properties
@@ -31,7 +31,7 @@ year2=Año final
 
 # Cursos.java
 
-tusCursos=TusCursos
+yourCourses=Tus Cursos
 
 # WorkExperience.java
 
@@ -42,12 +42,12 @@ date2=Fecha de aprendizaje
 title=Título del trabajo
 
 years=años
-meses=meses
-semanas=semana
+months=meses
+weeks=semanas
 
-año=year
-mes=mes
-semana=semana
+year=año
+month=mes
+week=semana
 
 # ITSkills.java
 
@@ -104,7 +104,7 @@ createCV=Crear CV
 
 plsEnter=*Obligatorio
 
-genitivo=:n
+genitive=
 
 # MENSAJES DE ERROR
 
