--- a/src/Bundle_fi.properties
+++ b/src/Bundle_fi.properties
@@ -13,7 +13,7 @@ urStrengths=Vahvuutesi
 setInfo=Aseta tiedot
 name=Nimi:
 address=Kotiosoite:
-email=S\u00e4hk\u00f6posti:
+email=Sähköposti:
 phone=Puhelinnumero:
 browse=Selaa
 other=Muuta:
@@ -27,7 +27,7 @@ school=Oppilaitos
 education=Koulutus
 degree=Tutkinto
 year1=Aloitusvuosi
-year2=P\u00e4\u00e4t\u00f6svuosi
+year2=Päätösvuosi
 
 # Courses.java
 
@@ -35,11 +35,11 @@ yourCourses=Kurssisi
 
 # WorkExperience.java
 
-workPlace=Ty\u00f6paikka
-job=Ty\u00f6
-date1=Aloitusp\u00e4iv\u00e4m\u00e4\u00e4r\u00e4
-date2=Lopetusp\u00e4iv\u00e4m\u00e4\u00e4r\u00e4
-title=Ty\u00f6nimike
+workPlace=Työpaikka
+job=Työ
+date1=Aloituspäivämäärä
+date2=Lopetuspäivämäärä
+title=Työnimike
 
 years=vuotta
 months=kuukautta
@@ -51,16 +51,16 @@ week=viikko
 
 # ITSkills.java
 
-urSkilz=Ohjelmat joita osaat k\u00e4ytt\u00e4\u00e4
+urSkilz=Ohjelmat joita osaat käyttää
 
 # Languages.java
 
 langSkill=Kielitaidot
 speech=Puhe
 written=Kirjallinen
-native=\u00e4idinkieli
+native=Äidinkieli
 
-langIn=Sy\u00f6t\u00e4 kieli
+langIn=Syötä kieli
 beginner=Aloittelija
 intermediate=Keskitaso
 advanced=Edistyksellinen
@@ -68,7 +68,7 @@ fluent=Sujuva
 
 selectSpeech=Valitse puhuttu kielitaitotasosi
 selectWritten=Valitse kirjallinen kielitaitotasosi
-setNative=Aseta \u00e4idinkieleksesi
+setNative=Aseta äidinkieleksesi
 
 # Hobbies.javva
 
@@ -76,7 +76,7 @@ urHobisColon3=Harrastuksesi
 
 # Positions.java
 
-urPos=Ty\u00f6teht\u00e4v\u00e4si
+urPos=Työtehtäväsi
 
 # Referees.java
 
@@ -84,20 +84,20 @@ urRefs=Suosittelijasi
 
 # GLOBAL STUFF
 
-add=Lis\u00e4\u00e4
+add=Lisää
 remove=Poista
 next=Seuraava
 back=Takaisin
 
 references=Suosittelijat
-positions=Ty\u00f6teht\u00e4v\u00e4t
+positions=Työtehtävät
 hobbies=Harrastukset
 languages=Kielet
 skills=IT-Taidot
-experience=Ty\u00f6kokemus
+experience=Työkokemus
 courses=Kurssit
 degrees=Tutkinnot
-details=Henkil\u00f6tiedot
+details=Henkilötiedot
 strengths=Vahvuudet
 
 createCV=Luo CV
@@ -108,7 +108,7 @@ genitive=:n
 
 # ERROR MESSAGES
 
-enterAll=Sy\u00f6t\u00e4 tiedot joka kentt\u00e4\u00e4n.
-enterSchool=Sy\u00f6t\u00e4 oppilaitoksen nimi.
-enterEd=Sy\u00f6t\u00e4 koulutuksen nimi.
-enterDeg=Sy\u00f6t\u00e4 tutkinnon nimi.
+enterAll=Syötä tiedot joka kenttään.
+enterSchool=Syötä oppilaitoksen nimi.
+enterEd=Syötä koulutuksen nimi.
+enterDeg=Syötä tutkinnon nimi.
