WE COCK DICK BALLING

--- a/src/main/resources/Bundle_fi.properties
+++ b/src/main/resources/Bundle_fi.properties
@@ -13,7 +13,7 @@ urStrengths=Vahvuutesi
 setInfo=Aseta tiedot
 name=Nimi:
 address=Kotiosoite:
-email=Sähköposti:
+email=SÃ¤hkÃ¶posti:
 phone=Puhelinnumero:
 browse=Selaa
 other=Muuta:
@@ -27,7 +27,7 @@ school=Oppilaitos
 education=Koulutus
 degree=Tutkinto
 year1=Aloitusvuosi
-year2=Päätösvuosi
+year2=PÃ¤Ã¤tÃ¶svuosi
 
 # Courses.java
 
@@ -35,11 +35,11 @@ yourCourses=Kurssisi
 
 # WorkExperience.java
 
-workPlace=Työpaikka
-job=Työ
-date1=Aloituspäivämäärä
-date2=Lopetuspäivämäärä
-title=Työnimike
+workPlace=TyÃ¶paikka
+job=TyÃ¶
+date1=AloituspÃ¤ivÃ¤mÃ¤Ã¤rÃ¤
+date2=LopetuspÃ¤ivÃ¤mÃ¤Ã¤rÃ¤
+title=TyÃ¶nimike
 
 years=vuotta
 months=kuukautta
@@ -51,16 +51,16 @@ week=viikko
 
 # ITSkills.java
 
-urSkilz=Ohjelmat joita osaat käyttää
+urSkilz=Ohjelmat joita osaat kÃ¤yttÃ¤Ã¤
 
 # Languages.java
 
 langSkill=Kielitaidot
 speech=Puhe
 written=Kirjallinen
-native=Äidinkieli
+native=Ã„idinkieli
 
-langIn=Syötä kieli
+langIn=SyÃ¶tÃ¤ kieli
 beginner=Aloittelija
 intermediate=Keskitaso
 advanced=Edistyksellinen
@@ -68,7 +68,7 @@ fluent=Sujuva
 
 selectSpeech=Valitse puhuttu kielitaitotasosi
 selectWritten=Valitse kirjallinen kielitaitotasosi
-setNative=Aseta äidinkieleksesi
+setNative=Aseta Ã¤idinkieleksesi
 
 # Hobbies.javva
 
@@ -76,7 +76,7 @@ urHobisColon3=Harrastuksesi
 
 # Positions.java
 
-urPos=Työtehtäväsi
+urPos=TyÃ¶tehtÃ¤vÃ¤si
 
 # Referees.java
 
@@ -84,20 +84,20 @@ urRefs=Suosittelijasi
 
 # GLOBAL STUFF
 
-add=Lisää
+add=LisÃ¤Ã¤
 remove=Poista
 next=Seuraava
 back=Takaisin
 
 references=Suosittelijat
-positions=Työtehtävät
+positions=TyÃ¶tehtÃ¤vÃ¤t
 hobbies=Harrastukset
 languages=Kielet
 skills=IT-Taidot
-experience=Työkokemus
+experience=TyÃ¶kokemus
 courses=Kurssit
 degrees=Tutkinnot
-details=Henkilötiedot
+details=HenkilÃ¶tiedot
 strengths=Vahvuudet
 
 createCV=Luo CV
@@ -108,7 +108,7 @@ genitive=:n
 
 # ERROR MESSAGES
 
-enterAll=Syötä tiedot joka kenttään.
-enterSchool=Syötä oppilaitoksen nimi.
-enterEd=Syötä koulutuksen nimi.
-enterDeg=Syötä tutkinnon nimi.
+enterAll=SyÃ¶tÃ¤ tiedot joka kenttÃ¤Ã¤n.
+enterSchool=SyÃ¶tÃ¤ oppilaitoksen nimi.
+enterEd=SyÃ¶tÃ¤ koulutuksen nimi.
+enterDeg=SyÃ¶tÃ¤ tutkinnon nimi.
