fixed translation problems

--- a/src/main/resources/Bundle_fi.properties
+++ b/src/main/resources/Bundle_fi.properties
@@ -76,7 +76,7 @@ urHobisColon3=Harrastuksesi
 
 # Positions.java
 
-urPos=Työtehtäväsi
+urPos=Vastuutehtäväsi
 
 # Referees.java
 
@@ -90,7 +90,7 @@ next=Seuraava
 back=Takaisin
 
 references=Suosittelijat
-positions=Työtehtävät
+positions=Vastuutehtävät
 hobbies=Harrastukset
 languages=Kielet
 skills=IT-Taidot
